Cotizador y sabias que

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1927,4 +1927,15 @@ select option {
   display: flex;
   flex-direction: row;
 }
-
+input[type="radio"]{
+  //position: absolute;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  box-sizing: border-box;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  left: 0;
+  right: auto;
+}
