--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -2041,3 +2041,9 @@ input[type="radio"] {
   left: 0;
   right: auto;
 }
+
+/* line 1942, ../sass/screen.scss */
+.video-screen {
+  width: 100%;
+  height: 100%;
+}
