--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1309,6 +1309,89 @@ border-radius: 20px;
   color: $color_2;
 }
 
+span{
+  font-family: 'Oswald', sans-serif;
+  color: chocolate;
+  font-size: 16px;
+  opacity: 0;
+  -webkit-animation:fadeIn ease-in-out 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in-out 1;
+  animation:fadeIn ease-in-out 1;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+  -webkit-animation-duration:3s;
+  -moz-animation-duration:3s;
+  animation-duration:3s;
+}
+
+input[type="checkbox"] {
+  background-image: -webkit-linear-gradient(hsla(0,0%,0%,.1), hsla(0,0%,100%,.1)),
+  -webkit-linear-gradient(left, #f66 50%, #6cf 50%);
+  background-size: 100% 100%, 200% 100%;
+  background-position: 0 0, 5px 0;
+  border-radius: 25px;
+  box-shadow: inset 0 1px 4px hsla(0,0%,0%,.5),
+  inset 0 0 10px hsla(0,0%,0%,.5),
+  0 0 0 1px hsla(0,0%,0%,.1),
+  0 -1px 2px 1px hsla(0,0%,0%,.25),
+  0 2px 2px 1px hsla(0,0%,100%,.5),
+  0 -2px 10px 2px hsla(0,0%,100%,.75),
+  0 2px 10px 2px hsla(0,0%,0%,.25);
+  cursor: pointer;
+  height: 10px;
+  padding-right: 10px;
+  position: relative;
+  width: 20px;
+  margin-right: 10px;
+  -webkit-appearance: none;
+  -webkit-transition: .15s;
+}
+input[type="checkbox"]:after {
+  background-color: #eee;
+  background-image: -webkit-linear-gradient(hsla(0,0%,100%,.1), hsla(0,0%,0%,.1));
+  border-radius: 25px;
+  box-shadow: inset 0 1px 1px 1px hsla(0,0%,100%,1),
+  inset 0 -1px 1px 1px hsla(0,0%,0%,.25),
+  0 1px 3px 1px hsla(0,0%,0%,.5),
+  0 0 2px hsla(0,0%,0%,.25);
+  content: '';
+  display: block;
+  height: 10px;
+  left: 0;
+  position: relative;
+  top: 0;
+  width: 10px;
+}
+input[type="checkbox"]:checked {
+  background-position: 0 0, 15px 0;
+  padding-left: 10px;
+  padding-right: 0;
+}
+input[type="checkbox"]:hover:before {
+  background: hsla(0,0%,0%,.25);
+  border-radius: 10px;
+  color: #e4ded4;
+  content: '✘';
+  font: 12px/20px sans-serif;
+  height: 20px;
+  left: 25px;
+  letter-spacing: 1px;
+  position: absolute;
+  text-align: center;
+  text-transform: uppercase;
+  top: -5px;
+  width: 20px;
+}
+input[type="checkbox"]:checked:hover:before {
+  content: '✔';
+}
+
+
+
+
+
+
+
 /*
 .flex-container {
   display: flex;
