--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -329,6 +329,7 @@ select option {
   animation: menu-mobile-leave 0.4s;
 }
 
+
 @keyframes menu-mobile-enter {
   0% {
     -webkit-transform: translate(-1000px, 0);
@@ -811,7 +812,7 @@ strong {
   //font-size: 0.8em;
   font-size: 17px;
   font-family: 'Oswald', sans-serif;
-  color: black;
+  color: #333333;
   font-weight: 400;
   opacity:0;  /* make things invisible upon start */
   -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
@@ -824,7 +825,9 @@ strong {
   animation-duration:2.7s;
   text-align: left;
   @media (min-width: 800px) {
-    font-size: 17px;
+    font-size: 22px;
+    margin-bottom: 60px;
+
   }
 
 }
@@ -1214,14 +1217,20 @@ border-radius: 20px;
 }
 
 .sabias-container {
-  height: 300px;
+  background-color: lightgrey;
   width: 350px;
-  border: 1px solid $color_4;
+  height: 100%;
+  border: 3px solid darkgray;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.29);
   @media (min-width: 800px) {
-    width: 800px;
+    width: 665px;
+    height: 300px;
+
   }
 }
 
@@ -1309,10 +1318,10 @@ border-radius: 20px;
   color: $color_2;
 }
 
-span{
+span, label{
   font-family: 'Oswald', sans-serif;
-  color: chocolate;
-  font-size: 16px;
+  color: black;
+  font-size: 17px;
   opacity: 0;
   -webkit-animation:fadeIn ease-in-out 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
   -moz-animation:fadeIn ease-in-out 1;
@@ -1346,6 +1355,9 @@ input[type="checkbox"] {
   -webkit-appearance: none;
   -webkit-transition: .15s;
 }
+
+
+
 input[type="checkbox"]:after {
   background-color: #eee;
   background-image: -webkit-linear-gradient(hsla(0,0%,100%,.1), hsla(0,0%,0%,.1));
@@ -1385,6 +1397,7 @@ input[type="checkbox"]:hover:before {
 input[type="checkbox"]:checked:hover:before {
   content: '✔';
 }
+
 
 
 
@@ -2012,17 +2025,50 @@ select option {
 }
 input[type="radio"]{
   //position: absolute;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
+  border-radius: 25px;
+  box-shadow: inset 0 1px 4px hsla(0,0%,0%,.5),
+  inset 0 0 10px hsla(0,0%,0%,.5),
+  0 0 0 1px hsla(0,0%,0%,.1),
+  0 -1px 2px 1px hsla(0,0%,0%,.25),
+  0 2px 2px 1px hsla(0,0%,100%,.5),
+  0 -2px 10px 2px hsla(0,0%,100%,.75),
+  0 2px 10px 2px hsla(0,0%,0%,.25);
   box-sizing: border-box;
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 12px;
+  height: 12px;
   cursor: pointer;
   left: 0;
-  right: auto;
+  margin-right: 10px;
+  -webkit-appearance: none;
+  -webkit-transition: .15s;
 }
+input[type="radio"]:checked {
+  background-color: #6cf;
+    }
+
+
+
 .video-screen{
   width:100%;
-  height:100%;
+  height: 100%;
+  overflow: hidden;
+  //height:100%;
+}
+
+#cotizador-form h3{
+  margin-top: 20px;
+  //text-decoration: underline;
+  color: lightseagreen;
+  opacity: 0;
+  font-size: 42px;
+  -webkit-animation: fadeIn ease-in 1;
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 3s;
+  -moz-animation-duration: 3s;
+  animation-duration: 3s;
+
 }
