Cotizador y sabias que

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1255,7 +1255,7 @@ border-radius: 20px;
   margin-bottom: 20px;
 }
 
-.slider_1, .slider_2, .slider_3, .slider_4, .slider_5 {
+.slider_1, .slider_2, .slider_3, .slider_4, .slider_5, .slider_6, .slider_7 {
   border: 1px solid #333;
   border-radius: 10px;
   cursor: pointer;
@@ -2072,3 +2072,26 @@ input[type="radio"]:checked {
   animation-duration: 3s;
 
 }
+div[title]:hover:after {
+  content: attr(title);
+  padding: 4px 8px;
+  color: #333;
+  //position: absolute;
+  //left: 0;
+  //top: 100%;
+  white-space: nowrap;
+  z-index: 1000;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -moz-box-shadow: 0px 0px 4px #222;
+  -webkit-box-shadow: 0px 0px 4px #222;
+  box-shadow: 0px 0px 4px #222;
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #eeeeee),color-stop(1, #cccccc));
+  background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -moz-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -ms-linear-gradient(top, #eeeeee, #cccccc);
+  background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
+}
+
