Mostrar los videos

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2123,7 +2123,7 @@ div[title]:hover:after {
   position: absolute;
   background-color: #fff;
   padding: 15px;
-  left: 45%;
+  left: 42%;
   top:40%;
   border: 3px solid darkgray;
   -webkit-border-radius: 20px;
@@ -2136,4 +2136,10 @@ div[title]:hover:after {
 }
 .btn-movie:hover{
   color: #000;
+}
+.arrow_animate{
+  transform : rotate(360deg);
+  -moz-transform : rotate(360deg); /* Firefox */
+  -webkit-transform : rotate(360deg); /* Chrome - Safari */
+  -o-transform : rotate(360deg); /* Opera */
 }
