--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -98,12 +98,12 @@ html {
 
 /* line 67, ../sass/screen.scss */
 .color-primary {
-  color: white;
+  color: chocolate;
 }
 
 /* line 71, ../sass/screen.scss */
 .color-terciary {
-  color: white;
+  color: chocolate;
 }
 
 /* line 76, ../sass/screen.scss */
@@ -666,7 +666,7 @@ select option {
 /* line 686, ../sass/screen.scss */
 h1 {
   font-family: 'Oswald', sans-serif;
-  font-size: 40px;
+  font-size: 55px;
   font-weight: bold;
   padding: 5px 0;
   opacity: 0;
@@ -691,7 +691,7 @@ h1 {
 
 /* line 707, ../sass/screen.scss */
 h3 {
-  font-size: 31px;
+  font-size: 35px;
   font-family: 'Oswald', sans-serif;
   padding: 10px 0;
   color: white;
@@ -713,7 +713,7 @@ h3 {
   /* line 707, ../sass/screen.scss */
   h3 {
     text-justify: inter-word;
-    font-size: 24px;
+    font-size: 35px;
   }
 }
 
@@ -833,7 +833,7 @@ strong {
 @media (min-width: 800px) {
   /* line 811, ../sass/screen.scss */
   .container-info p {
-    font-size: 22px;
+    font-size: 20px;
     margin-bottom: 60px;
   }
 }
@@ -2055,7 +2055,7 @@ button:hover {
 .slider-alto {
   min-height: 320px;
   font-family: 'Oswald', sans-serif;
-  font-size: 22px;
+  font-size: 20px;
   -webkit-animation: fadeIn ease-in-out 1;
   /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
   -moz-animation: fadeIn ease-in-out 1;
