--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2126,8 +2126,8 @@ div[title]:hover:after {
   position: absolute;
   background-color: #fff;
   padding: 15px;
-  left: 42%;
-  top:40%;
+  left: 35%;
+  top:35%;
   border: 3px solid darkgray;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -2136,6 +2136,10 @@ div[title]:hover:after {
   -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
   box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
   z-index: 1;
+  @media (min-width: 800px) {
+    left: 42%;
+    top:40%;
+  }
 }
 .btn-movie:hover{
   color: #000;
