--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2260,3 +2260,10 @@ button:hover{
 #chat-login, #enviar-consulta, #enviar-cotizacion{
   margin-top: 50px;
 }
+.form-control[disabled], fieldset[disabled] .form-control {
+  cursor: not-allowed;
+}
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+  opacity: 1;
+}
+
